--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,3 +1,15 @@
+.header {
+  display: flex;
+  align-items: center;
+  padding: 0 50px;
+}
+
+@media (max-width: 768px) {
+  .header {
+    padding: 0 10px;
+  }
+}
+
 .logo {
   display: flex;
   align-items: center;
